Fix null frame ptr for extension messaging.

Bug: 806938
Change-Id: I748f78c6a2e2ec440cf4a156350e8197c8490fb3